--- a/.github/workflows/Build_Lenovo_sm8750.yml
+++ b/.github/workflows/Build_Lenovo_sm8750.yml
@@ -1,11 +1,8 @@
 name: Build_Lenovo_sm8750
-
-env:
-  gz_branch: 'heads'
 on:
   workflow_dispatch:
     inputs:
-       ksu_type:
+      ksu_type:
         description: "📝请选择要集成的KSU："
         required: true
         type: choice
@@ -13,6 +10,7 @@ on:
           - 'SukiSU'
           - 'ReSukiSU'
         default: 'ReSukiSU'
+        
       kernel_version:
         description: "📝请选择要编译的版本："
         required: true
@@ -58,13 +56,14 @@ jobs:
     name: Build_${{ env.KERNEL_VERSION }}
     runs-on: ubuntu-latest
     env:
-      KSU_TYPE:           ${{ env.ksu_type }}
-      KERNEL_VERSION:           ${{ env.kernel_version }}
-      CUSTOM_KERNEL_SUFFIX:   ${{ env.custom_kernel_suffix }}
-      CUSTOM_KERNEL_TIME: ${{ env.custom_kernel_time }}
-      ENABLE_BBG:       ${{ env.enable_bbg }}
-      ENABLE_KPM:       ${{ env.enable_kpm }}
-      ENABLE_SIGNED:       ${{ env.enable_signed }}
+      gz_branch: 'heads'
+      KSU_TYPE:           ${{ github.event.inputs.ksu_type }}
+      KERNEL_VERSION:           ${{ github.event.inputs.kernel_version }}
+      CUSTOM_KERNEL_SUFFIX:   ${{ github.event.inputs.custom_kernel_suffix }}
+      CUSTOM_KERNEL_TIME: ${{ github.event.inputs.custom_kernel_time }}
+      ENABLE_BBG:       ${{ github.event.inputs.enable_bbg }}
+      ENABLE_KPM:       ${{ github.event.inputs.enable_kpm }}
+      ENABLE_SIGNED:       ${{ github.event.inputs.enable_signed }}
     steps:
       - uses: actions/checkout@v4
         with:
